2010-07-05  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* dispextern.h (FRINGE_HEIGHT_BITS): New define.
	(struct glyph_row): New members left_fringe_offset and
	right_fringe_offset.

	* xterm.c (x_draw_fringe_bitmap): Don't clip bottom aligned bitmap
	specially.
	* w32term.c (w32_draw_fringe_bitmap): Likewise.
	* nsterm.m (ns_draw_fringe_bitmap): Likewise.

	* fringe.c (draw_fringe_bitmap_1): Don't clip bitmap here.
	Take account of	bitmap offset.
	(draw_window_fringes): Take account of window vscroll.
	(update_window_fringes): Likewise.  Extend top-aligned top indicator
	or bottom-aligned bottom indicator to adjacent rows if it doesn't fit
	in one row.  Don't set redraw_fringe_bitmaps_p outside row comparison.
	Set left_fringe_offset and right_fringe_offset (Bug#5634, Bug#6325).

2010-07-04  Juanma Barranquero  <lekktu@gmail.com>

	* w32fns.c (Qtooltip): Declare.
	Suggested by Andy Moreton <andrewjmoreton@gmail.com>.

2010-07-03  Jan Djärv  <jan.h.d@swipnet.se>

	* xmenu.c (x_activate_menubar): Send Press/Release for Gtk+ to avoid
	grab on just Press (Bug#6499).

2010-07-02  Chong Yidong  <cyd@stupidchicken.com>

	* frame.c (Qtooltip): New var.
	(delete_frame): Use it.  Fix faulty if statement.  Don't update
	mode line for tooltip frames.  Suggested by Martin Rudalics.

	* xfns.c (x_create_tip_frame):
	* w32fns.c (x_create_tip_frame): Use it.

2010-06-30  Naohiro Aota  <naota@elisp.net>  (tiny change)

	* xftfont.c (xftfont_open): Check font width one by one also when
	spacing is dual.

	* ftfont.c (ftfont_open): Ditto.

2010-06-26  Andreas Schwab  <schwab@linux-m68k.org>

	* alloc.c (Fmake_byte_code): Don't access undefined argument
	(Bug#6517).

2010-06-25  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (next_element_from_image): Ensure that after-strings are
	read the next time we hit handle_stop (Bug#1336).

2010-06-23  Andreas Schwab  <schwab@linux-m68k.org>

	* lread.c (read1): Signal error if #s is not followed by paren.
